Fixes for spacing and divider appearance

--- a/projects/ccf-rui/src/app/modules/right-sidebar/right-sidebar.component.theme.scss
+++ b/projects/ccf-rui/src/app/modules/right-sidebar/right-sidebar.component.theme.scss
@@ -14,7 +14,7 @@
       background-color: mat-color($background, sidebar-background)
     }
 
-    hr {
+    mat-divider {
       border-color: mat-color($foreground, sidebar-dividers);
     }
 
